src/objects/OfferingObjectCalculations__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configurable calculations for offering object based on record type and license type.</description>
    <fields>
        <fullName>ActiveCalculation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DestinationField__c</fullName>
        <description>Destination field for the calculation</description>
        <label>DestinationField</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <description>Formula for calculating and populating the destination field.
Use field API names in the formulas</description>
        <label>Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LicenseType__c</fullName>
        <description>Offering license type</description>
        <label>License Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeDevName__c</fullName>
        <description>Record Type developer Name</description>
        <label>Record Type Dev Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Offering Object Calculations</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ActiveCalculation__c</columns>
        <columns>DestinationField__c</columns>
        <columns>Formula__c</columns>
        <columns>LicenseType__c</columns>
        <columns>RecordTypeDevName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>